--- a/Library Management System/index.html
+++ b/Library Management System/index.html
@@ -1,68 +1,77 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Library Management System</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <header>
-      <h1>Welcome to Library Management System</h1>
-    </header>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Library Management System</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <header>
+    <h1>Welcome to Library Management System</h1>
+  </header>
 
-    <div class="container">
-      <section class="form-section">
-        <h2>Add or Edit Book</h2>
+  <div class="container">
+    <!-- Add/Edit Book Form -->
+    <section class="form-section">
+      <h2>Add or Edit Book</h2>
+      <input type="hidden" id="editId" />
 
-        <input type="hidden" id="editId" />
+      <label>Book Name</label>
+      <input type="text" id="bookName" />
 
-        <label>Book Name</label>
-        <input type="text" id="bookName" />
+      <label>Author</label>
+      <input type="text" id="authorName" />
 
-        <label>Author</label>
-        <input type="text" id="authorName" />
+      <label>Pages</label>
+      <input type="number" id="pages" />
 
-        <label>Pages</label>
-        <input type="number" id="pages" />
+      <label>Price</label>
+      <input type="number" id="price" />
 
-        <label>Price</label>
-        <input type="number" id="price" />
+      <label>Category</label>
+      <input type="text" id="category" />
 
-        <button id="addBtn" onclick="addBook()">Add Book</button>
-        <button id="updateBtn" onclick="updateBook()" class="hidden">
-          Update Book
-        </button>
-      </section>
+      <label>ISBN NO.</label>
+      <input type="text" id="isbn" />
 
-      <section class="search-section">
-        <input
-          type="text"
-          id="searchInput"
-          placeholder="Search by Book or Author"
-        />
-        <button onclick="searchBooks()">Search</button>
-      </section>
+      <button id="addBtn" onclick="addBook()">Add Book</button>
+      <button id="updateBtn" onclick="updateBook()" class="hidden">Update Book</button>
+    </section>
 
-      <section class="table-section">
-        <h2>All Books</h2>
+   
+    <section class="search-section">
+      <input type="text" id="searchInput" placeholder="Search by Book, Author, or ISBN" />
+      <button onclick="searchBooks()">Search</button>
+      <button onclick="downloadAllBooks()">Download All Books</button>
+    </section>
 
-        <table>
-          <thead>
-            <tr>
-              <th>Book Name</th>
-              <th>Author</th>
-              <th>Pages</th>
-              <th>Price</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
-          <tbody id="bookTable"></tbody>
-        </table>
-      </section>
-    </div>
+    <!-- Book Table -->
+    <section class="table-section">
+      <h2>All Books</h2>
+      <table>
+        <thead>
+          <tr>
+            <th>Book Name</th>
+            <th>Author</th>
+            <th>Pages</th>
+            <th>Price</th>
+            <th>Category</th>
+            <th>ISBN NO.</th>
+            <th>Actions</th>
+          </tr>
+        </thead>
+        <tbody id="bookTable"></tbody>
+      </table>
+    </section>
+  </div>
 
-    <script src="db.js"></script>
-    <script src="script.js"></script>
-  </body>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf-autotable/3.5.25/jspdf.plugin.autotable.min.js"></script>
+
+
+  <script src="db.js"></script>
+  <script src="script.js"></script>
+</body>
 </html>
